<resources>
    <string name="app_name">Chaterest</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="tech">Tech</string>
    <string name="sports">Sports</string>
    <string name="music">Music</string>
    <string name="interest">Choose your interests</string>
    <string name="update">Update</string>
    <string name="signout">Sign Out</string>
    <string name="changeusr">Change Username</string>
    <string name="usrhint">Username</string>

    <string name="appdesc">
        \t\tChaterest is an app where people from all over the world with similar interests can interact with each other. You can chat with people who also love what you love.
        \n\nStuck with BSoD on your Computer?
        \nOr curious to learn the techniques of chess?
        \nOr don\'t know how to play a chord?
        \n\nYou can get the answers here!\n
        \nChaterest brings you three major categories:
        \n-Tech
        \n-Sports
        \n-Music
        \n\n\t\tChoose whatever category you want and ask your questions right away. Or feel like an expert? Then you can answer questions from others to improve yourself.
        Hope you enjoy the app!
    </string>


    <string name="appteam">
        \t\tChaterest was created by Team Haddy, a group of four Computer Science and Engineering Students who are passionate about Technology.
        \n\nDeepak B
        \nDhanush P
        \nHarini V
        \nAnuvitha G

        \n\nWe\'ve always been been as creative as possible, even with our team name (which is the combination of the first letters in our names). We have created this app with the aim of making it useful as well as secure. Your identity remains completely anonymous unless you expose it yourself. User privacy is our priority.\n\nIf you have any feedback regarding the app, feel free to write to chaterest@gmail.com\n\nThank you for downloading Chaterest!\n\n\n\n
    </string>
</resources>