<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <ImageView
        android:id="@+id/set_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_about_logo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_toRightOf="@id/set_profile"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="50dp"
        android:textSize="40sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/appabt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="About the app"
        android:textColor="@color/colorPrimary"
        android:layout_below="@id/set_profile"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="3dp"
        android:textSize="18dp"
        />

    <TextView
        android:id="@+id/aboutapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appdesc"
        android:layout_below="@id/appabt_title"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="3dp"
        android:textSize="18dp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/abtteam_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Message from the developers"
        android:color="@color/colorPrimary"
        android:layout_below="@id/aboutapp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="3dp"
        android:textSize="18dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appteam"
        android:layout_below="@id/abtteam_title"
        android:layout_marginTop="10dp"
        android:textSize="18dp"
        android:layout_marginLeft="3dp"
        android:textColor="@color/black"
        />

</RelativeLayout>
</ScrollView>
</RelativeLayout>