<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".SettingsActivity">
    <ImageView
        android:id="@+id/set_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_about_logo"
        android:onClick="gotoabout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_toRightOf="@id/set_profile"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="50dp"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:onClick="gotoabout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="120dp"
        android:layout_toRightOf="@id/set_profile"
        android:onClick="gotoabout"
        android:text="Tap to know more"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/username_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/set_profile"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="30dp"
        android:text="Username"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/set_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_title"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/usrhint"
        android:inputType="text"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/mail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_username_btn"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="30dp"
        android:text="Email ID"
        android:textSize="20dp" />


    <EditText
        android:id="@+id/emailid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mail_title"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:editable="false"
        android:inputType="none"
        android:onClick="toastmail"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <Button
        android:id="@+id/change_username_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_username"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        app:backgroundTint="@color/colorPrimary"
        android:padding="10dp"
        android:text="@string/changeusr"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/sign_out_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailid"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:padding="10dp"
        android:text="@string/signout"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="normal"
        app:backgroundTint="@color/colorPrimary" />


</RelativeLayout>